# gst-plugin-spinnaker

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.in  README.md  config.h  configure  configure.ac  gstspinnaker.c  gstspinnaker.h  libtool  meson.build
src/: Makefile  Makefile.am  Makefile.in  gstspinnaker.c  gstspinnaker.h
